# ChangeLog for media-libs/libdvdnav
# Copyright 2003 Martin Hierling <mad@cc.fh-lippe.de>; Distributed under the GPL
# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-libs/libvdrdvdnav/ChangeLog,v 1.1 2003/04/25 13:17:49 mad Exp $

*libvdrdvdnav-0.1.4 (25 Apr 2003)

  25 Apr 2003; Martin Hierling <mad@cc.fh-lippe.de> libdvdnav-0.1.4.ebuild:
  Initial version. adapted from the original Gentoo Version which was 
  not usable for vdr, this uses libdvdnav-0.1.4note2-vdr-as2, which is a
  patched version.